--- a/.github/workflows/auto-delete-old-files.yml
+++ b/.github/workflows/auto-delete-old-files.yml
@@ -1,16 +1,24 @@
-name: Auto Delete Old Files
+name: Delete old WhatsApp attachments
 
 on:
   schedule:
-   - cron: 0 0 * * *
-    
-jobs:
-  delete-old-files:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - cron: '0 0 * * *'  # Runs daily at midnight UTC
 
-      - name: Delete old files
+  workflow_dispatch:  # Allows manual trigger
+
+jobs:
+  cleanup:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Remove files older than 2 days
         run: |
-          find . -type f -mtime +2 -delete
+          find whatsapp_attachments/ -type f -mtime +2 -exec rm {} \;
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add .
+          git commit -m "Deleted WhatsApp attachments older than 2 days" || echo "No changes to commit"
+          git push
