--- a/.github/workflows/auto-delete-old-files.yml
+++ b/.github/workflows/auto-delete-old-files.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Remove files older than 2 days
         run: |
-          find whatsapp_attachments/ -type f -mtime +2 -exec rm {} \;
+          find . -type f -mtime +2 -exec rm {} \;
           git config --global user.name "d5user"
           git config --global user.email "d5.softtradeinfotech@gmail.com"
           git add .
