--- a/.github/workflows/auto-delete-old-files.yml
+++ b/.github/workflows/auto-delete-old-files.yml
@@ -3,7 +3,6 @@ name: Delete old WhatsApp attachments
 on:
   schedule:
     - cron: '0 0 * * *'  # Runs daily at midnight UTC
-
   workflow_dispatch:  # Allows manual trigger
 
 jobs:
@@ -16,9 +15,15 @@ jobs:
 
       - name: Remove files older than 2 days
         run: |
-          find . -type f -mtime +2 -exec rm {} \;
+           find . -type f -mtime +2 -exec rm {} \;
+
+      - name: Commit and Push Changes
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
+        run: |
           git config --global user.name "d5user"
           git config --global user.email "d5.softtradeinfotech@gmail.com"
           git add .
           git commit -m "Deleted WhatsApp attachments older than 2 days" || echo "No changes to commit"
-          git push
+          git push https://d5user:${GH_PAT}@github.com/d5user/WhatsappNew.git main
+
