--- a/.github/workflows/auto-delete-old-files.yml
+++ b/.github/workflows/auto-delete-old-files.yml
@@ -13,19 +13,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          persist-credentials: false 
+          persist-credentials: false  # Important to avoid authentication conflicts
 
       - name: Remove files older than 2 days
         run: |
-           find . -type f -mtime +2 -exec rm {} \;
+          find . -type f -mtime +2 -exec rm {} \;
 
       - name: Commit and Push Changes
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
         run: |
-          git config --global user.name "d5user"
-          git config --global user.email "d5.softtradeinfotech@gmail.com"
+          git config user.name "d5user"
+          git config user.email "d5.softtradeinfotech@gmail.com"
           git add .
           git commit -m "Deleted WhatsApp attachments older than 2 days" || echo "No changes to commit"
-          git push https://d5user:${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}@github.com/d5user/WhatsappNew.git main
-
+          git push https://d5user:${GH_PAT}@github.com/d5user/WhatsappNew.git main
