--- a/.github/workflows/auto-delete-old-files.yml
+++ b/.github/workflows/auto-delete-old-files.yml
@@ -25,6 +25,16 @@ jobs:
         run: |
           git config user.name "d5user"
           git config user.email "d5.softtradeinfotech@gmail.com"
+          
+           # Set authentication using the token
+          git remote set-url origin https://oauth2:${GH_PAT}@github.com/d5user/WhatsappNew.git
+          
+          # Pull latest changes to avoid conflicts
+          git pull origin main --rebase
+          
+          # Stage and commit changes          
           git add .
           git commit -m "Deleted WhatsApp attachments older than 2 days" || echo "No changes to commit"
-          git push https://d5user:${GH_PAT}@github.com/d5user/WhatsappNew.git main
+           
+           # Push the changes
+          git push origin main
