--- a/.github/workflows/auto-delete-old-files.yml
+++ b/.github/workflows/auto-delete-old-files.yml
@@ -1,49 +1,39 @@
-name: Delete all files older than 2 days (excluding workflows)
+name: Clean Old Files
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Runs daily at midnight UTC
-  workflow_dispatch:  # Allows manual trigger
+    - cron: '0 0 * * *' # Runs at midnight UTC every day
 
 jobs:
-  cleanup:
+  clean-files:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Remove files older than 2 days (excluding workflows)
+      - name: Set up Git
         run: |
-          # Find and delete all files older than 2 days, excluding .github/workflows
-          echo "Removing files older than 2 days, excluding workflow files..."
+         git config --global user.name "d5user"
+         git config --global user.email "d5.softtradeinfotech@gmail.com"
 
-          # Get a list of files changed in the last 2 days
-          files=$(git log --since="2 days ago" --pretty=format: --name-only | sort -u)
-
-          # Exclude workflow files by filtering out anything in .github/workflows
-          filtered_files=$(echo "$files" | grep -v "^\.github/workflows/")
-
-          if [ -z "$filtered_files" ]; then
-            echo "No files to delete."
-          else
-            echo "$filtered_files" > files-to-delete.txt
-            cat files-to-delete.txt
-            while IFS= read -r file; do
-              git rm "$file" || echo "Failed to remove $file"
-            done < files-to-delete.txt
-          fi
-
-      - name: Commit and Push Changes
-        env:
-          GH_PAT: ${{ secrets.GH_PAT }}
+      - name: Get commit date of files
         run: |
-          git config --global user.name "d5user"
-          git config --global user.email "d5.softtradeinfotech@gmail.com"
+          # Get the list of files committed 3 days ago
+          THREE_DAYS_AGO=$(date -d '3 days ago' --utc +%Y-%m-%dT%H:%M:%SZ)
+          FILES_TO_DELETE=$(git log --since="$THREE_DAYS_AGO" --name-only --pretty=format: | sort -u)
 
-          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/d5user/WhatsappNew.git
-          
-          git status
-          git add .
-          git commit -m "Deleted files older than 2 days, excluding workflows" || echo "No changes to commit"
-          git push origin main
+          # Delete the files, excluding .github/workflows
+          for file in $FILES_TO_DELETE; do
+            if [ -f "$file" ] && [[ "$file" != .github/workflows/* ]]; then
+              echo "Deleting $file"
+              git rm "$file"
+            else
+              echo "Skipping $file (workflow file)"
+            fi
+          done
+
+      - name: Commit changes
+        run: |
+          git commit -m "Delete files committed 3 days ago"
+          git push origin HEAD
